--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .page {
     position: relative;
     width: 100%;
-    height: 100vh;
+    display: flex;
 }
 
 header {
@@ -92,8 +92,72 @@ header {
     padding-left: 20px;
 }
 
+.intro, .image-right {
+    width: 50%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-right .image {
+    position: relative;
+    width: 80%;
+    height: 80%;
+}
+
+.image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.image .h2 {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 5rem;
+    bottom: 15rem;
+    margin: auto;
+    width: 17rem;
+    height: 2rem;
+    word-spacing: 0.5rem;
+}
+
+.text {
+    display: grid;
+    gap: 20px;
+}
+
+.text h2 {
+    font-family: "Anton", sans-serif;
+    font-size: 5rem;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 6rem;
+    text-shadow: 0 0 10px #333, 0 0 20px #333, 0 0 40px #333, 0 0 80px #333;
+}
+
+.text p {
+    font-size: 1rem;
+    color: #333;
+}
+
+.self-btn {
+    width: 20%;
+    height: 45px;
+    border-radius: 10px;
+    background: darkblue;
+    color: #fff;
+    border: none;
+    font-size: 1.1rem;
+    cursor: pointer;
+    box-shadow: 0 4px 10px #444;
+}
+
 .wrapper {
     position: absolute;
+    top: 0;
     width: 100%;
     height: 100%;
     background: gold;
